# advent-of-code

./: .gitignore  .gitmodules  Cargo.toml  README.md
2015/01-not-quite-lisp/: Cargo.toml
2015/04-stocking-stuffer/: Cargo.toml
2015/10-look-and-say/: Cargo.toml
2015/13-dinner-knights/: Cargo.toml
2015/15-hungry-science/: Cargo.toml
2015/17-no-such-thing-as-too-much/: Cargo.toml
2015/19-medicine-for-rudolph/: Cargo.toml
2015/20-infinite-elves/: Cargo.toml
2015/21-rpg-simulator-20XX/: Cargo.toml
2015/24-hang-in-balance/: Cargo.toml
2016/03-triangles/: Cargo.toml
2016/06-signal-noise/: Cargo.toml
2016/10-balance-bots/: Cargo.toml
2016/11-radio-isotopes/: Cargo.toml
2016/12-leonardos-monorail/: Cargo.toml
2016/13-maze/: Cargo.toml
2016/16-dragon-checksum/: Cargo.toml
2016/19-white-elephant/: Cargo.toml
2016/23-safe-cracking/: Cargo.toml
2016/24-air-duct-spelunking/: Cargo.toml
2016/25-clock-signal/: Cargo.toml
2017/02-corruption-checksum/: Cargo.toml
2017/03-spiral-memory/: Cargo.toml
2017/04-high-entropy-passphrase/: Cargo.toml
2017/05-twisty-maze/: Cargo.toml
2017/07-recursive-circus/: Cargo.toml
2017/08-register-like/: Cargo.toml
2017/10-knot-hash/: Cargo.toml
2017/11-hex-ed/: Cargo.toml
2017/13-packet-scanner/: Cargo.toml
2017/15-dueling-generators/: Cargo.toml
2017/16-permutation-promenade/: Cargo.toml
2017/19-series-of-tubes/: Cargo.toml
2017/20-particle-swarm/: Cargo.toml
2017/21-fractal-art/: Cargo.toml
2017/22-sporification-virus/: Cargo.toml
2017/23-coprocessor-conflagation/: part2.c
2018/01-chronical-calibration/: Cargo.toml
2018/02-inventory-management-system/: Cargo.toml
2018/03-no-matter-how-you-slice-it/: Cargo.toml
2018/04-repose-record/: Cargo.toml
2018/05-alchemical-reduction/: Cargo.toml
2018/06-chronical-coordinates/: Cargo.toml
2018/08-memory-maneuver/: Cargo.toml
cpp/: CMakeLists.txt
cpp/2023/: 01-trebuchet.cpp  02-cube-conundrum.cpp
cpp/2023/01-trebuchet/: Makefile  input.hpp  trebuchet.cpp  utils.hpp
cpp/2023/inputs/: input-02.hpp
cpp/utils/: utils.hpp
julia/02-dive/: dive.jl
plugin/: advent-of-code.vim
python/: README.md  pyproject.toml  requirements.txt
python/2024/: 01_historian.py
python/2024-01-historian-hysteria/: historian.py
python/2024-02-red-nosed-reports/: red-nosed.py
python/2024-03-mull-it-over/: mull.py
python/2024-04-ceres-search/: ceres.py
python/src/2024/: aoc04_ceres.py  aoc05_print_queue.py  aoc06_guard_gallivant.py
rust/2015/09-single-night/: Cargo.toml
rust/2015/09-single-night/src/: main.rs
src/: main.rs  taxicab.rs
(+394 files in other folders)
