[package]
name = "single-night"
version = "0.1.0"
authors = ["Emil Ohlsson <emil@kottland.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coding-challenge-utils = { git = "https://github.com/EmilOhlsson/coding-challenge-utils.git" }
regex = "1"
